# openenv-submission

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
my_env/: client.py  models.py  openenv.yaml  requirements.txt
my_env/server/: Dockerfile  app.py  environment.py
server/: app.py
